# code-challenge

./: .gitignore  README.md  mypy.ini  pyproject.toml  setup.py
code_challenge/: company.py  hello.py
code_challenge/api/: config.py  config_file.py  graphql_data.py  graphql_query.py  graphql_reader.py  settings.py
code_challenge/exceptions/: code_challenge_exception.py
code_challenge/models/: company.py  price.py  recommendation.py
code_challenge/scripts/: code_challenge.py  test.py
code_challenge/services/: company_service.py  recommendation_service.py
feeds/: feed_y.py  run.py
scripts/: code_challenge.py
tests/unit/api/: config_file_test.py  graphql_data_test.py  graphql_query_test.py  graphql_reader_test.py
tests/unit/services/: company_service_test.py  recommendation_service_test.py
