[tool.poetry]
name = "code-challenge"
version = "0.1.0"
description = ""
authors = ["Carlos <carlosspy@gmail.com>"]
readme = "README.md"
packages = [{include = "code_challenge"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
