[tool.poetry]
name = "code-challenge"
version = "0.1.0"
description = "Code challenge package"
authors = ["Carlos <carlosspy@gmail.com>"]
readme = "README.md"
packages = [{include = "code_challenge"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^1.5.2"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
mypy = "^0.991"
flake8 = "5.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
